# toy-vm

./: .gitignore  Cargo.toml
src/: attribute_info.rs  class_file.rs  classpath.rs  constant_pool.rs  entry.rs  interpreter.rs  jvm_stack.rs  main.rs  read_bytes_ext.rs  thread.rs
src/instructions/: comparisons.rs  constants.rs  control.rs  conversions.rs  extended.rs  factory.rs  load.rs  math.rs  mod.rs  stack.rs  stores.rs
