[package]
name = "toy-vm"
version = "0.1.0"
authors = ["Chunpeng Wen <wcp1231@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
env_logger = "0.7.1"
log = "0.4"
zip = "0.5.4"

[dev-dependencies]
